# Blush

./: .gitignore  .gitmodules  CMakeLists.txt  FIX.md  LICENSE  README.md  TODO.MD  build.bat  n.html  readme.md  run.bat  test.cpp
.cache/clangd/index/: audio.cpp.F4477AE354A5B60E.idx  audio.hpp.64221E3926CF0477.idx  audio.hpp.78563A6AE997E3E5.idx  base.hpp.3E7FD0BDAA75AE0B.idx  blush.hpp.AB9273A041EA2711.idx  cd.cpp.35D84DB3046767AB.idx  clear.cpp.F81555BB61328D1A.idx  colors.hpp.959F8672F5FBE844.idx  command.cpp.13177A9DCE7C0B80.idx  command.hpp.4FE5B599FD978B22.idx  echo.cpp.5362B0FFD9D10213.idx  exit.cpp.65A52694FACCE079.idx  file.cpp.CA9580749D72E34C.idx  file.hpp.B2ECE0E203B9BE90.idx  help.cpp.CB078076D2A1DD45.idx  history.cpp.5A00769FBF35426A.idx  history.cpp.942C71EE98F2D798.idx  history.hpp.70E7191E8759E4A4.idx  input.hpp.7DA79E3FE5039475.idx  job.hpp.561E8BB3DB776804.idx  ma_channel_combiner_node.c.B126C1C637948263.idx  ma_channel_combiner_node.h.BB9BDC8DCCF775EE.idx  ma_channel_separator_node.c.F9068BE765251308.idx  ma_channel_separator_node.h.FA860204F21ABC03.idx  ma_ltrim_node.c.AB48CF65E8B120B7.idx  ma_ltrim_node.h.C32B9772CEFFDE65.idx  ma_reverb_node.c.00D1052A7C0A8CA5.idx  ma_reverb_node.h.3D64D42A099C9F52.idx  ma_vocoder_node.c.0133F20A5E16AE97.idx  ma_vocoder_node.h.E75177E04D9A5B4C.idx  main.cpp.0ABC652666FA89E9.idx  miniaudio.c.2BCD6D5FCB6DB73E.idx  miniaudio.h.DC26B91EF992ABE0.idx  miniaudio_libopus.c.E7D68D65955FEDB1.idx  miniaudio_libopus.h.ABE742503AEB006C.idx  miniaudio_libvorbis.c.A21F25EF7524D1CF.idx  miniaudio_libvorbis.h.5F4845F2941F195F.idx  play.cpp.655A390649E2E669.idx  posix.cpp.2964825300931AA6.idx  posix.cpp.3D697D98174FAEAC.idx  (+6 more)
.github/: FUNDING.yml
.kiro/specs/save-load-system/: requirements.md
assets/: icon.res
include/: blush.hpp  cute_sound.hpp
include/audio/: audio.hpp
include/commands/: base.hpp
include/core/: command.hpp  history.hpp  job.hpp  shell.hpp
include/tui/: colors.hpp
include/utils/: audio.hpp  file.hpp  input.hpp  saveload.hpp  string.hpp
scripts/: build.py  build_installer.txt  build_windows.py  compile_icon.py  run.py  run_windows.py
src/: bcolors.cpp  blush.cpp  main.cpp
src/commands/: alias.cpp  cd.cpp  clear.cpp  cls.cpp  color.cpp  echo.cpp  exit.cpp  help.cpp  history.cpp  play.cpp  quit.cpp  save.cpp  sinfo.cpp  version.cpp
src/core/: command.cpp  history.cpp  shell.cpp
src/core/job/: posix.cpp  windows.cpp
src/includes/: bbcmds.h  bcolors.h  blversion.h  cfm.h  cmd.h  historyhandler.h  iojson.h  loanim.h  s_upu.h  systeminfo.h  trim.h  updater.h
src/installer/: installer_gui.py  installer_gui.spec
src/modules/: history.cpp
src/utils/: audio.cpp  file.cpp  input.cpp  iojson.cpp  saveload.cpp  startup.cpp  string.cpp  trim.cpp
src/utils/input/: posix.cpp  windows.cpp
todo/: en_chat_ideas.md
web/: blush_server.js  index.html  package-lock.json  package.json
web/cdn.getblush.xyz/: cdnblush_server.js
web/cdn.getblush.xyz/files/installer/: translations.json
web/install.getblush.xyz/: installserver.js
web/install.getblush.xyz/files/: installer.cmd  installer.sh
web/public/: index.html  platforms.html
